--- a/example1/src/main/webapp/ex10/Login.html
+++ b/example1/src/main/webapp/ex10/Login.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
+<meta charset="utf-8">
 <title>Insert title here</title>
 </head>
 <body>
-<form method="post" action="./Login.jsp">
+<form method="post" action="./login.jsp">
 id: <input type ="text" name = "id">
 pw: <input type ="password" name = "passwd">
 <input type="submit">
