--- a/example1/src/main/webapp/ex5.html
+++ b/example1/src/main/webapp/ex5.html
@@ -4,7 +4,12 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
-<meta charset="utf-8">
+<meta charset="UTF-8">
+<script
+      src="https://code.jquery.com/jquery-3.6.4.js"
+      integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+      crossorigin="anonymous"
+    ></script>
 <title>사칙연산 계산기</title>
 <style>
 body {
@@ -26,10 +31,15 @@ background-color: #9c63bb;
 border: 2px solid;
 }
 
+ul{
+list-style:none;
+}
+
 </style>
 </head>
 <body>
-<form method="get" action="/example1/TestServlet">
+<!-- 하단 메소드에서 post로 해야함....... -->
+<form method="post" action="/example1/CalculatorServlet">
 <fieldset>
 <legend>사칙 연산 계산기</legend><br>
 연산을 진행할 숫자와 기호를 입력해주세요<br><br>
@@ -38,12 +48,36 @@ border: 2px solid;
 <option value="" disabled selected="true">--연산 기호 선택--</option>
  <option id="add">+</option>
  <option id="subtract">-</option>
- <option id="multiply">×</option>
- <option id="divide">÷</option>
+ <option id="multiply">*</option>
+ <option id="divide">/</option>
  </select>
 <input type="number" name="num2" placeholder="숫자를 입력해주세요"><br><br>
 <input type="submit" value="계산하기"/>
 </fieldset>
 </form>
+  <h1>계산 결과</h1>
+  <p id="result"></p>
+
+  <h2>계산 이력</h2>
+  <ul id="history"></ul>
+
+  <script>
+    // 서블릿에서 계산 결과와 계산 이력 값을 받아와서 출력하는 함수
+    function showResult(result, history) {
+      var resultElement = document.getElementById("result");
+      var historyElement = document.getElementById("history");
+
+      // 계산 결과 출력
+      resultElement.textContent = result;
+
+      // 계산 이력 출력
+      historyElement.innerHTML = "";
+      history.forEach(function (calculation) {
+        var li = document.createElement("li");
+        li.textContent = calculation;
+        historyElement.appendChild(li);
+      });
+    }
+  </script>
 </body>
 </html>
